--- a/config.conf
+++ b/config.conf
@@ -1,21 +1,19 @@
 [info]
-#开始在一起的日期，格式参考 2022-06-24
-start_date=2022-06-24
+#认识的日期，格式参考 2022-06-24
+start_date=2020-05-27
 #你女朋友所在的城市，写城市名或省份名或者所在的区  如 "云南"或者"昆明"或者"五华区"
-city1=昆明
+city1=青岛
 #你女朋友的家乡，写城市名或省份名或者所在的区  如 "云南"或者"昆明"或者"五华区"
-city2=腾冲
+city2=莱西
 #你女朋友的生日，注意格式只写*月*日 如："07-21"
-birthday_lover=07-21
-#你的生日,注意格式只写*月*日 如："07-21"
-birthday_my=05-04
+birthday_lover=8-26
 #以下为微信测试号的参数，在申请时会显示
-app_id=wxbc471cb
-app_secret=c4149ff570
+app_id=wx8be0c2a75ebf54af
+app_secret=c6b1a5357f5d97a5a8adf1f8fc36dc68
 #消息模板ID，在微信测试号中添加模板会自动生成ID
-template_id=o_H3x859-mrYPv2ynphC
+template_id=iUM_pQxEHPrY2hLRBf66NUluUhwdL7LqdzMuWSIqn0A
 #接收消息的用户ID，让你的女朋友扫微信测试号的二维码，获取微信用户ID
-user_id=oB3
+user_id=oo1mC6pjEw_94eTHapqS1VViucxM,oo1mC6hVwFSF4d7D_Ybk1AZC4N6A
 #如有多个女朋友或者女朋友有多个微信，请使用以下格式,","隔开
 #user_id=****,***,*****
 
